Add opt-in support for emitting exceptions as log signals